--- a/AdventOfCode2025.csproj
+++ b/AdventOfCode2025.csproj
@@ -4,11 +4,16 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="data\**\*.txt" CopyToOutputDirectory="PreserveNewest" />
+    <None Include="questions\**\*.*" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.68.0" />
   </ItemGroup>
 
 </Project>
